# simon-distrolocs

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements.md
scripts/: duplicate_repo.py
scripts/verify/: verify_forgejo_token.sh  verify_github_ssh.sh  verify_gitlab_token_auth.sh
src/simon_distrolocs/: __init__.py  __main__.py  assemble_config.py  clone_repos.py  compare_paths.py  compute_hashes.py  config.py  evaluate_sync.py  execute_sync.py  filesystem.py  forgejo_client.py  git_clone.py  manage_files.py  render_tree_view.py  sync_engine.py  types.py  visualization.py
src/simon_distrolocs/auth_verification/: __init__.py  verify_forgejo_token.sh  verify_github_ssh.sh  verify_gitlab_token.sh
src/simon_distrolocs/duplication/: __init__.py  duplicate_repo.py  forgejo_api.py  get_forgejo_config.py
src/simon_distrolocs/git_helpers/: __init__.py  build_source_clone_url.py  get_git_env.py  get_ssl_context.py
src/simon_distrolocs/parsing/: __init__.py  parse_auth_type.py  parse_distro_types.py  parse_duplications.py  parse_git_sources.py  parse_link_method.py  parse_mappings.py  parse_toml.py
src/simon_distrolocs/types/: __init__.py  define_app_config.py  define_auth_type.py  define_config_mapping.py  define_distro_type.py  define_git_source.py  define_link_method.py  define_repo_duplication.py  define_repo_info.py  define_sync_state.py  define_sync_status.py
